# project-metrics

./: .gitignore  LICENSE  RealFile.cs  db.txt  metrics.cabal  mypage.hamlet  stack.yaml  test.cs
.stack-work/install/x86_64-linux/lts-3.6/7.10.2/flag-cache/: metrics-0.1.0.0-5d1a57a23b46faa8526ef6c2bba46cc8
.stack-work/install/x86_64-linux/lts-3.6/7.10.2/pkgdb/: metrics-0.1.0.0-5d1a57a23b46faa8526ef6c2bba46cc8.conf  package.cache
app/: Main.hs
src/: Database.hs  Grep.hs  Lib.hs
statistics/: chart.html  chartWithData.html  cloc.csv  collectStats.rb  countIdent.sh  data.yml  parseCsv.rb  testingInterfaces.rb
test/: Spec.hs
test/testfiles/: Proxies.cs  test.fs
