name:                metrics
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/steveshogren/metrics#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Shogren
maintainer:          steve.a.shogren@gmail.com
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Database,Grep
  build-depends:       HUnit >= 1.2.5.2
                     , base >= 4.7 && < 5
                     , blaze-html >= 0.8.1.0
                     , containers >= 0.5.6.2
                     , mtl >= 2.2.1
                     , process >= 1.2.3.0
                     , shakespeare
                     , text >= 1.2.1.3
                     , time >= 1.5.0.1
  default-language:    Haskell2010

executable metrics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HUnit >= 1.2.5.2
                     , base
                     , blaze-html >= 0.8.1.0
                     , containers >= 0.5.6.2
                     , metrics
                     , mtl >= 2.2.1
                     , process >= 1.2.3.0
                     , shakespeare
                     , text >= 1.2.1.3
                     , time >= 1.5.0.1
  default-language:    Haskell2010

test-suite metrics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.2.5.2
                     , base
                     , blaze-html >= 0.8.1.0
                     , containers >= 0.5.6.2
                     , metrics
                     , mtl >= 2.2.1
                     , process >= 1.2.3.0
                     , shakespeare
                     , text >= 1.2.1.3
                     , time >= 1.5.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/steveshogren/metrics
